changed omg links

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/flow.jpg" alt=""class="img-responsive" alt="">
+                        <img src="img/portfolio/flow1.jpg" alt=""class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Leash</h4>
@@ -415,19 +415,19 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <h4>Request Walk</h4>
-                                    <img class="img-responsive img-centered" src="img/leash/home.jpg" alt="">
+                                    <img class="img-responsive img-centered" src="img/leash/home1.jpg" alt="">
                                 </div>
                                 <div class="col-md-12" >
                                     <h4>Choose Walker</h4>
-                                    <img class="img-responsive img-centered" src="img/leash/choosewalker.jpg" alt="">
+                                    <img class="img-responsive img-centered" src="img/leash/choosewalker1.jpg" alt="">
                                 </div>
                                 <div class="col-md-12">
                                     <h4>Track Progress</h4>
-                                    <img class="img-responsive img-centered" src="img/leash/trackprogress.jpg" alt="">
+                                    <img class="img-responsive img-centered" src="img/leash/trackprogress1.jpg" alt="">
                                 </div>
                                 <div class="col-md-12">
                                     <h3>User Flows</h3>
-                                    <img class="img-responsive img-centered" src="img/leash/flow.jpg" alt="">
+                                    <img class="img-responsive img-centered" src="img/leash/flow1.jpg" alt="">
                                 </div>
                             </div>
 
