--- a/index.html
+++ b/index.html
@@ -327,8 +327,9 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Leash</h2>
-                            <p>Leash is a self-induced solo project for my own development as a product designer. I am particularly interested in mobile applications with complex, back end business demands. A dog walking app is just this - the user must be able to outsource the task with as much ease as requesting an Uber or Lyft - but is, for the most part, blind to the execution of service. I focused on the primary interactions a user would have within the mobile app and sought to improve the experience from a number of different angles. See my process below. 
+                            <p>Leash is a self-induced solo project for my own development as a product designer. I am particularly interested in mobile applications with complex, back end business demands. A dog walking app is just this - the user must be able to outsource the tassk with as much ease as requesting an Uber or Lyft - but is, for the most part, blind to the execution of service. I focused on the primary interactions a user would have within the mobile app and sought to improve the experience from a number of different angles. See my process below. 
                             </p>
+                            <img class="img-responsive img-centered" src="img/leash/header.jpg" alt="">
                             <br><br>
                                 <div class="row"> 
                                     <div class="col-sm-3" >
