--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/flow1.jpg" alt=""class="img-responsive" alt="">
+                        <img src="img/portfolio/phones.jpg" alt=""class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Leash</h4>
@@ -327,7 +327,7 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Leash</h2>
-                            <p>Leash is a self-induced solo project for my own development as a product designer. I am particularly interested in mobile applications with complex, back end business demands. A dog walking app is just this - the user must be able to outsource the tassk with as much ease as requesting an Uber or Lyft - but is, for the most part, blind to the execution of service. I focused on the primary interactions a user would have within the mobile app and sought to improve the experience from a number of different angles. See my process below. 
+                            <p>Leash is a self-induced solo project for my own development as a product designer. I am particularly interested in mobile applications with complex, back end business demands. A dog walking app is just this - the user must be able to outsource the task with as much ease as requesting an Uber or Lyft - but is, for the most part, blind to the execution of service.  I focused on the primary interactions a user would have within the mobile app and sought to improve the experience from a number of different angles. See my process below. 
                             </p>
                             <img class="img-responsive img-centered" src="img/leash/header.jpg" alt="">
                             <br><br>
@@ -435,21 +435,27 @@
                             <h3>Wireframes</h3>
                                 <div class="row">
                                     <div class="col-xs-4">
+                                        <h4>Request Walk</h4>
                                         <img class="img-responsive img-centered" src="img/leash/axurescreens/1.jpg" alt="">
                                     </div>
                                     <div class="col-xs-4">
+                                        <h4>Browse Walkers</h4>
                                         <img class="img-responsive img-centered" src="img/leash/axurescreens/2.jpg" alt="">
                                     </div> 
                                     <div class="col-xs-4">
-                                        <img class="img-responsive img-centered" src="img/leash/axurescreens/3.jpg" alt="">
-                                    </div> 
-                                    <div class="col-xs-4">
-                                        <img class="img-responsive img-centered" src="img/leash/axurescreens/4.jpg" alt="">
-                                    </div> 
-                                    <div class="col-xs-4">
+                                        <h4>Choose Walker</h4>
                                         <img class="img-responsive img-centered" src="img/leash/axurescreens/5.jpg" alt="">
                                     </div> 
                                     <div class="col-xs-4">
+                                        <h4>Track Progress</h4>
+                                        <img class="img-responsive img-centered" src="img/leash/axurescreens/4.jpg" alt="">
+                                    </div> 
+                                    <div class="col-xs-4">
+                                        <h4>Chat Function</h4>
+                                        <img class="img-responsive img-centered" src="img/leash/axurescreens/3.jpg" alt="">
+                                    </div> 
+                                    <div class="col-xs-4">
+                                        <h4>Account Setup</h4>
                                         <img class="img-responsive img-centered" src="img/leash/axurescreens/6.jpg" alt="">
                                     </div>              
                                 </div>    
@@ -459,6 +465,9 @@
                             <img class="img-responsive img-centered" src="img/leash/appmap.jpg" alt="">
 
                             <h3>User Flows</h3>
+                            <img class="img-responsive img-centered" src="img/leash/userflow.jpg" alt="">
+
+                            <h3>UI Kit</h3>
                             <img class="img-responsive img-centered" src="img/leash/userflow.jpg" alt="">
 
                             <h3>Screens</h3>
@@ -479,7 +488,6 @@
                                  
                             <h3>Prototype</h3>
                             <h4>"Happy Path" Prototype Scenario</h4>
-                            <br><br>
                             <p>Leash user Steven would like to schedule the “PM walk” for his dogs Buddy and Lucky tomorrow night - November 24th 2015 at 7:00 PM. He wishes to choose the highest-rated walker, be able to chat with him/her during the walk, and see live updates during the walk.</p>
                             <iframe src="https://marvelapp.com/e86c4f?emb=1" width="452" height="901" allowTransparency="true" frameborder="0"></iframe> 
                             <br><br>  
@@ -646,7 +654,7 @@ I created this video using Keynote's animation effects.
                             <h2>Fractured Prune Doughnuts</h2>
                             <p class="item-intro text-muted">Designing a design-your-own doughnut shop</p>
                             <img class="img-responsive img-centered" src="img/fp/smores.jpg" alt="">
-                            <p>During 2014-2015, I led the launch of a new food concept in Arizona.  I was responsible for the design and implementation of every system of the business - store layout, digital marketing, operations, sales, customer service staffing, training, payroll, supply chain management, product development - you name the vertical and I was totally committed toward its perfection.  In just one year, we grew from zero to five stores and over sixty employees.
+                            <p>During 2014-2015, I led the launch of a new food concept in Arizona.  I was responsible for the design and implementation of every system of the business - store layout, digital marketing, operations, sales, customer service, staffing, training, payroll, supply chain management, product development - you name the vertical, and I was absolutely committed to perfecting it.  In just one year, we grew from zero to five stores and over sixty employees.
 
  <br><br>This is case study illustrates the <strong>business design</strong> work I am capable of producing.
  
