--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                                 </div>
                                 <div class="col-md-12">
                                     <h4>Track Progress</h4>
-                                    <img class="img-responsive img-centered" src="img/leash/trackprogress2.jpg" alt="">
+                                    <img class="img-responsive img-centered" src="img/leash/trackprogress.jpg" alt="">
                                 </div>
                                 <div class="col-md-12">
                                     <h3>User Flows</h3>
