--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <i class="fa fa-mobile fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">UX &amp; IxD</h4>
-                    <p class="text-muted">I read, research, interview, and then synthesize with information architecture, personas, and scenarios. Then, I begin product development with app maps, task flows, and low-fidelity wires. User test > collect insights > iterate. Repeat cycle over and over. And over and over. </p>
+                    <p class="text-muted">Read, research, interview - then synthesize with IA, personas, and scenarios. Begin product development with app maps, task flows, and low-fidelity wires. User test > collect insights > iterate. Repeat cycle over and over. And over and over.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -105,14 +105,14 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">UI &amp; Front End Development</h4>
-                    <p class="text-muted">I begin with style guides, color pallets, iconography sets, and typography options. From there, I can transform wireframes into high-fidelity mockups. On the development side, I am fluent in HTML &amp; CSS and skilled with jQuery, JavaScript, jQuery, Bootstrap, and Wordpress.</p>
+                    <p class="text-muted">Style guides, color pallets, iconography sets, typography options - from there, I turn wireframes into high-fidelity mockups. On the development side, I am fluent in HTML &amp; CSS and skilled with JavaScript/jQuery, Bootstrap, and Wordpress.</p>
                 </div>
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-list-alt fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Business/Service Design</h4>
-                    <p class="text-muted">I  design the required systems, processes, checklists, templates, maps, agendas, presentations, and communication channels to make sure every customer touchpoint aligns with thes next. I am equally tuned into perfecting the small details as well as the big picture.
+                    <p class="text-muted">I have designed the required systems, processes, checklists, maps, agendas, presentations, and communication channels to ensure every customer touchpoint aligns with the next.  I am able to think big-picture business design by honing in on each small detail. 
                     </p>
                 </div>
             </div>
