--- a/index.html
+++ b/index.html
@@ -412,23 +412,27 @@
                             </div>
     
                             <h3>Sketches &amp; Wireframes</h3>
-                            <p>With research synthesized - this is when I start to sketch my ideas. Below you can see me dive into each function. </p>
+                            <br>
                             <div class="row">
                                 <div class="col-md-12">
                                     <h4>Request Walk</h4>
-                                    <img class="img-responsive img-centered" src="img/leash/home1.jpg" alt="">
+                                 
+                                    <img class="img-responsive img-centered" src="img/leash/sketches/requestwalk.jpg"onmouseover="this.src='img/leash/sketches/requestwalk2.jpg'" onmouseout="this.src='img/leash/sketches/requestwalk.jpg'" />
+<p>With the REQUEST WALK function,  you can see me initially play with MAP vs. NO-MAP variations. After many sketches, I concluded that the required screen real estate to house a map was not worth the compromised UX. Thus, I pursued a no-map variation (on hover.)  In this concept, the user’s dogs, walk types, and pickup address are created and programmed in Account Setup. Here, you see DOGS and WALK TYPE formatted in a segmented control interaction, with ADDRESS autofilled. The NOW/LATER toggle would trigger the iOs calendar ticker. Upon submitting this information, the system is able to determine available walkers for that time period. This is another reason to not incorporate a map in REQUEST WALK — it requires this data first to then accurately visualize the available walkers.  I can 100% understand aesthetic arguments for including a map - and am working on that variation as we speak. </p>   
                                 </div>
                                 <div class="col-md-12" >
                                     <h4>Choose Walker</h4>
-                                    <img class="img-responsive img-centered" src="img/leash/choosewalker1.jpg" alt="">
+                                    <img class="img-responsive img-centered" src="img/leash/sketches/choosewalker2.jpg" alt="">
+<p>From the start, I understood that the CHOOSE WALKER section would require two screens - BROWSE WALKER and WALKER BIO.  For the BROWSE WALKER section, I played with a list view (see middle highlight) and a swipe interaction (similar to what you find in TaskRabbit.) I found the swipe experience to be more mobile-friendly. The order of presented walkers is determined by an algorithm that factors in the walker’s distance away/ETA from the pickup address with his/her ratings. While the user can swipe left and right - upon tap, the user  is submerged into WALKER BIO - where he/she can watch a video of the walker, read reviews, and ultimately BOOK WALKER for the specified Date/Time/Address.</p>                               
                                 </div>
                                 <div class="col-md-12">
                                     <h4>Track Progress</h4>
-                                    <img class="img-responsive img-centered" src="img/leash/trackprogress.jpg" alt="">
+                                    <img class="img-responsive img-centered" src="img/leash/sketches/trackprogress2.jpg" alt="">
+<p>In TRACK PROGRESS, the user is able to see a map of the area (left highlight.) From here, the user can follow the route of the walk, while also keeping tabs on the walker’s progress, completing tasks for the specified walk type. At the top of the screen, the user is able to switch to a CHAT FUNCTION (middle highlight) - where he/she can communicate directly to the walker. This is where the walker, too, could send pictures of the dog during the walk. </p>
                                 </div>
                                 <div class="col-md-12">
                                     <h3>User Flows</h3>
-                                    <img class="img-responsive img-centered" src="img/leash/flow1.jpg" alt="">
+                                    <img class="img-responsive img-centered" src="img/leash/sketches/flow1.jpg" alt="">
                                 </div>
                             </div>
 
@@ -610,10 +614,11 @@ I created this video using Keynote's animation effects.
                                     <source src="img/pulseband/scenarios.m4v" type="video/ogg"></source>
                                 </source>
                             </video>
-<!--                             <h2>Prototypes</h2><br><br>
-                            <h3>Onboarding</h3>
-                            <iframe src="axure/iframe.html" frameborder="0" style="height: 100%; border: none"></iframe>
-                            <h3> -->
+
+                            <h3>Prototype</h3>
+                            <iframe src="https://marvelapp.com/c756fd?emb=1" width="452" height="901" allowTransparency="true" frameborder="0"></iframe> 
+                            <br><br>  
+ 
 
                             <h3>More Screens</h3>
                             <img class="img-responsive img-centered" src="img/pulseband/wires.png" alt""> 
