--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Danny Luber</title>
+    <title>DANNY LUBER</title>
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -34,7 +34,7 @@
   <!-- lato light -->
     <link href='https://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 
-    <link rel="shortcut icon" href="img/favicon.png">
+    <link rel="shortcut icon" href="img/favicon.ico">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 
 </head>
@@ -343,11 +343,11 @@
                             <img class="img-responsive img-centered" src="img/leash/header1.jpg" alt="">
                             <br><br>
                                 <div class="row"> 
-                                    <div class="col-sm-3" >
+                                    <div class="col-sm-2" >
                                         <h4>Platform</h4>
                                         <p>iOs</p>
                                     </div>
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-4">
                                         <h4>PRODUCT DESCRIPTION</h4>
                                         <p>An on-demand mobile dog walking application that can safely employ someone to do the chore for you.</p>
                                     </div>
@@ -355,11 +355,7 @@
                                         <h4>Project Scope</h4>
                                         <p>1 week</p>
                                     </div>
-                                    <div class="col-sm-6">
-                                        <h4>My Role</h4>
-                                        <p>This was a solo project. All deliverables seen below are produced by me.</p>
-                                    </div>
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-3">
                                         <h4>Technology</h4>
                                         <p>Omnigraffle, Axure, Sketch, Marvel, Keynote</p>
                                     </div>
