--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                                     </div>
                                     <div class="col-sm-3">
                                         <h4>Technology</h4>
-                                        <p>Omnigraffle, Axure, Sketch, Marvel, Keynote</p>
+                                        <p>Omnigraffle, Axure, Sketch, Marvel</p>
                                     </div>
                                 </div>
 
@@ -394,7 +394,8 @@
 
                             <div class="row">
                                 <div class="col-md-12">
-                                <h3>Synthesis</h3>
+                                <h2>Synthesis</h2>
+                                <h3>Functions</h3>
                                 <p>After digging through Wag, I found what I believe to be the primary processes a user executes within a dog walking app. They are detailed below with their accompanying parts. For purposes of simplifying this build - I solely explored these primary functions.</p>
                                     <div class="col-sm-4">
                                         <h4>REQUEST/SCHEDULE/BOOK WALK</h4>
@@ -424,24 +425,49 @@
                                         </ul> 
                                     </div>
                                 </div>
+<!--                                 <div class="col-md-12">
+                                    <h3>Research Insights &amp; Design Objectives</h3>
+                                    <div class="col-sm-4">
+                                        <p><strong>RI #1: </strong>
+                                        Dog owners are quicker to relinquish dog-walking responsibilities during busy or stressful times.
+                                        </p><br>
+                                        <p><strong>DO #1: </strong>
+                                        Create an app that empowers dog owners to transfer (not relinquish) responsibility stress-free.
+                                        </p>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <p><strong>RI #2: </strong>
+                                        Dog owners wish they walked their dogs more than they actually do.
+                                        </p><br>   
+                                        <p><strong>DO #2: </strong>
+                                        Create an app that outsources the task of walking, while still giving the dog owner an inside look into the experience.     
+                                        </p>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <p><strong>RI #3: </strong>
+                                        Dog owners will engage with product that they believe will improve their dog’s life. 
+                                        </p><br>   
+                                        <p><strong>DO #3: </strong>
+                                        Create a multi-pronged, transparent application that inspires belief and trust. 
+                                        </p>
+                                    </div> -->
+                                </div>
                             </div>
     
-                            <h3>Sketches &amp; Wireframes</h3>
-                            <br>
+                            <h2>Sketches &amp; Wireframes</h2>
                             <div class="row">
                                 <div class="col-md-12">
-                                    <h4>Request Walk</h4>
-                                 
-                                    <!-- <img class="img-responsive img-centered" src="img/leash/sketches/requestwalk.jpg"onmouseover="this.src='img/leash/sketches/requestwalk2.jpg'" onmouseout="this.src='img/leash/sketches/requestwalk.jpg'" /> -->
+                                <h3>Request Walk</h3>
+                                 <img class="img-responsive img-centered" src="img/leash/sketches/requestwalk.jpg"onmouseover="this.src='img/leash/sketches/requestwalk2.jpg'" onmouseout="this.src='img/leash/sketches/requestwalk.jpg'" /> 
 <p>With the REQUEST WALK function,  you can see me initially play with MAP vs. NO-MAP variations. After many sketches, I concluded that the required screen real estate to house a map was not worth the compromised UX. Thus, I pursued a no-map variation (on hover.)  In this concept, the user’s dogs, walk types, and pickup address are created and programmed in Account Setup. Here, you see DOGS and WALK TYPE formatted in a segmented control interaction, with ADDRESS autofilled. The NOW/LATER toggle would trigger the iOs calendar ticker. Upon submitting this information, the system is able to determine available walkers for that time period. This is another reason to not incorporate a map in REQUEST WALK — it requires this data first to then accurately visualize the available walkers.  I can 100% understand aesthetic arguments for including a map - and am working on that variation as we speak. </p>   
                                 </div>
                                 <div class="col-md-12" >
-                                    <h4>Choose Walker</h4>
+                                    <h3>Choose Walker</h3>
                                     <img class="img-responsive img-centered" src="img/leash/sketches/choosewalker2.jpg" alt="">
 <p>From the start, I understood that the CHOOSE WALKER section would require two screens - BROWSE WALKER and WALKER BIO.  For the BROWSE WALKER section, I played with a list view (see middle highlight) and a swipe interaction (similar to what you find in TaskRabbit.) I found the swipe experience to be more mobile-friendly. The order of presented walkers is determined by an algorithm that factors in the walker’s distance away/ETA from the pickup address with his/her ratings. While the user can swipe left and right - upon tap, the user  is submerged into WALKER BIO - where he/she can watch a video of the walker, read reviews, and ultimately BOOK WALKER for the specified Date/Time/Address.</p>                               
                                 </div>
                                 <div class="col-md-12">
-                                    <h4>Track Progress</h4>
+                                    <h3>Track Progress</h3>
                                     <img class="img-responsive img-centered" src="img/leash/sketches/trackprogress2.jpg" alt="">
 <p>In TRACK PROGRESS, the user is able to see a map of the area (left highlight.) From here, the user can follow the route of the walk, while also keeping tabs on the walker’s progress, completing tasks for the specified walk type. At the top of the screen, the user is able to switch to a CHAT FUNCTION (middle highlight) - where he/she can communicate directly to the walker. This is where the walker, too, could send pictures of the dog during the walk. </p>
                                 </div>
