--- a/index.html
+++ b/index.html
@@ -100,31 +100,32 @@
                     <h2 class="section-heading">What I Do</h2><br><br>
 <!--                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
-            </div>
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-mobile fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">UX &amp; IxD</h4>
-                    <p class="text-muted">Read, research, interview - then synthesize with IA, personas, and scenarios. Begin product development with app maps, task flows, and low-fidelity wires. User test > collect insights > iterate. Repeat cycle over and over. And over and over.</p>
+                <div class="row text-center">
+                    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-mobile fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="service-heading">UX &amp; IxD</h4>
+                        <p class="text-muted">Read, research, interview - then synthesize with IA, personas, and scenarios. Begin product development with app maps, task flows, and low-fidelity wires. User test > collect insights > iterate. Repeat cycle over and over. And over and over.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="service-heading">UI &amp; Front End Development</h4>
+                        <p class="text-muted">Style guides, color pallets, iconography sets, typography options - from there, I turn wireframes into high-fidelity mockups. On the development side, I am fluent in HTML &amp; CSS and skilled with JavaScript/jQuery, Bootstrap, and Wordpress.</p>
+                    </div>
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-list-alt fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="service-heading">Business/Service Design</h4>
+                        <p class="text-muted">I have designed the required systems, processes, checklists, maps, agendas, presentations, and communication channels to ensure every customer touchpoint aligns with the next.  I am able to think big-picture business design by honing in on each small detail.</p>
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">UI &amp; Front End Development</h4>
-                    <p class="text-muted">Style guides, color pallets, iconography sets, typography options - from there, I turn wireframes into high-fidelity mockups. On the development side, I am fluent in HTML &amp; CSS and skilled with JavaScript/jQuery, Bootstrap, and Wordpress.</p>
-                </div>
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-list-alt fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Business/Service Design</h4>
-                    <p class="text-muted">I have designed the required systems, processes, checklists, maps, agendas, presentations, and communication channels to ensure every customer touchpoint aligns with the next.  I am able to think big-picture business design by honing in on each small detail. 
-                    </p>
+               
                 </div>
             </div>
         </div>
@@ -338,7 +339,7 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h1>Leash</h1>
-                            <p>Leash is a self-induced solo project for my own development as a product designer. I am particularly interested in mobile applications with complex, back end business demands. A dog walking app is just this - the user must be able to outsource the task with as much ease as requesting an Uber or Lyft - but is for the most part blind to the execution of service.  I focused on the primary interactions a user would have within the mobile app and sought to improve the experience from a number of different angles. See my process below. 
+                            <p>Leash is a solo project for my own development as a product designer. I am particularly interested in mobile applications with complex, back end business demands. A dog walking app is just this - the user must be able to outsource the task with as much ease as requesting an Uber or Lyft - but is for the most part blind to the execution of service.  I focused on the primary interactions a user would have within the mobile app and sought to improve the experience from a number of different angles. See my process below. 
                             </p>
                             <img class="img-responsive img-centered" src="img/leash/header1.jpg" alt="">
                             <br><br>
@@ -703,7 +704,6 @@ I created this video using Keynote's animation effects.
  
                             <h2>Ordering Process</h2>
                             <p class="item-intro text-muted">Empowering the customer to customize while keeping the business demands in mind</p>
-
                              <ul class="quadrant">
                                 <li>
                                     <img class "img-responsive" src="img/fp/orderticketfront.jpg" alt="">
