--- a/index.html
+++ b/index.html
@@ -125,7 +125,32 @@
                         <p class="text-muted">I have designed the required systems, processes, checklists, maps, agendas, presentations, and communication channels to ensure every customer touchpoint aligns with the next.  I am able to think big-picture business design by honing in on each small detail.</p>
                     </div>
                 </div>
-               
+                <!-- <div class="row text-center">
+                    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-mobile fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="service-heading">Copywriting</h4>
+                        <p class="text-muted">Should the CTA read “Register Now” or “Sign Up?” Should the directions be written in third-person or second? What voice should the blog be written in? Well, when product design calls for a copywriter - I have the skills to deliver. Put me in coach!</p>
+                    </div>
+                    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="service-heading">Digital Marketing</h4>
+                        <p class="text-muted">From managing social media accounts to producing top-notch email campaigns - I love the responsibility of owning a brand’s online experience. Consistently putting out creative content with cute captions and engaging visuals is the recipe to garnering a loyal online following….(in my opinion.)</p>
+                    </div>
+                    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-list-alt fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="service-heading">Public Speaking</h4>
+                        <p class="text-muted">Persuasion isn’t easy — so you have to come prepared! Luckily, I’m a Keynote wiz and experienced public speaker. I believe a good presentation must have a great story - every sentence needs the right slide, every segway the right transition or animation.</p>
+                    </div>
+                -->
                 </div>
             </div>
         </div>
@@ -223,7 +248,7 @@
                                     <h4 class="subheading">THE COLLEGE YEARS</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Graduated with a Psychology degree, but enjoyed classes in architecture, theatre, philosophy, screenwriting, and documentary production. Coached tennis, basketball, and chess to underserved communities on the side. Interned at a branding agency called <a href="http://www.heartbeatideas.com/" target="_blank">Heartbeat Ideas</a> one summer, and taught 7th Grade Sceince at <a href="https://www.breakthroughcollaborative.org/" target="_blank">Breakthrough Collaborative</a> another summer. Also met my best friends in the world! </p>
+                                    <p class="text-muted">Graduated with a Psychology degree, but enjoyed classes in architecture, theatre, philosophy, screenwriting, and documentary production. Coached tennis, basketball, and chess to underserved communities on the side. Interned at a branding agency <a href="http://www.heartbeatideas.com/" target="_blank">Heartbeat Ideas</a> one summer and taught 7th Grade Sceince at <a href="https://www.breakthroughcollaborative.org/" target="_blank">Breakthrough Collaborative</a> another summer. Also met my best friends in the world! </p>
                                 </div>
                             </div>
                         </li>
