changed to research

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="intro-lead-in"> </div>
                 
                 <div class="intro-heading animated fadeIn">Danny Luber</div>
-                <h3 class="animated fadeIn">Designer. Thinker. Coder. Writer. </h3>
+                <h3 class="animated fadeIn">Designer. Thinker. Researcher. Writer. </h3>
                 <a href="#services" class="page-scroll btn btn-xl animated bounceInUp">Learn More</a>
             </div>
         </div>
