--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+<!--             <div class="row">
                 <div class="col-sm-6 portfolio-item">
                     <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -252,8 +252,8 @@
                         <h4>Wardrobot</h4>
                         <p class="text-muted">Mobile App Design, Mobile App Prototyping</p> 
                     </div>
-                </div>
-            </div>
+                </div> -->
+            <!-- </div> -->
         </div>
     </section>
   <!-- About Section -->
