--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="intro-lead-in"> </div>
                 
                 <div class="intro-heading animated fadeIn">Danny Luber</div>
-                <h3 class="animated fadeIn">Designer. Thinker. Researcher. Writer. </h3>
+                <h3 class="animated fadeIn">Designer  |  Researcher  |  Product Manager  |  Writer </h3>
                 <a href="#services" class="page-scroll btn btn-xl animated bounceInUp">Learn More</a>
             </div>
         </div>
@@ -115,14 +115,14 @@
                             <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="service-heading">UI &amp; Front End Development</h4>
-                        <p class="text-muted">Style guides, color pallets, iconography sets, typography options - from there, I transform wireframes into high-fidelity mockups. On the development side, I am fluent in HTML &amp; CSS and skilled with JavaScript, 1jQuery, Bootstrap, and Wordpress.</p>
+                        <p class="text-muted">Style guides, color pallets, iconography sets, typography options - from there, I transform wireframes into high-fidelity mockups. On the development side, I am fluent in HTML &amp; CSS, Bootstrap, and Wordpress. Currently learning JavaScript.
                     </div>
                         <span class="fa-stack fa-4x">
                             <i class="fa fa-circle fa-stack-2x text-primary"></i>
                             <i class="fa fa-list-alt fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="service-heading">Business/Service Design</h4>
-                        <p class="text-muted">I have designed the required systems, processes, checklists, maps, agendas, presentations, and communication channels to ensure every customer touchpoint aligns with the next. I am able to think big-picture business design by honing in on each small detail.</p>
+                        <p class="text-muted">I have designed the required systems, processes, checklists, maps, agendas, and channels to ensure every customer touchpoint aligns with the next. I am able to think big-picture business design by honing in on each small detail.</p>
                     </div>
                 </div>
                 <br>
@@ -132,8 +132,8 @@
                             <i class="fa fa-circle fa-stack-2x text-primary"></i>
                             <i class="fa fa-keyboard-o fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="service-heading">Copywriting</h4>
-                        <p class="text-muted">Should the button read “Register Now” or “Sign Up?” Should the directions be written in third-person or second? What voice should the blog be? When product design calls for a copywriter - I have the skills to deliver.</p>
+                        <h4 class="service-heading">Content/Copywriting</h4>
+                        <p class="text-muted"> What voice/perspective should the blog be writiten in? Should the CTA read “Register Now” or “Sign Up?" Whether it's creating useful content or coating that content with engaging copy -- when product design calls for a writer - I have the skills to deliver.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -141,7 +141,7 @@
                             <i class="fa fa-picture-o fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="service-heading">Digital Marketing</h4>
-                        <p class="text-muted">From managing social media to editing photo/video to producing email campaigns - I love owning a brand’s online experience. Consistently putting out creative content is the recipe to garnering a loyal online following (in my opinion.)</p>
+                        <p class="text-muted">From managing social media accounts to editing photo/video to producing email campaigns - I love owning a brand’s online experience. Consistently putting out creative content is the recipe to garnering a loyal online following (in my opinion.)</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -317,11 +317,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>MAY 2015 - OCTOBER 2015</h4>
+                                    <h4>JUNE 2015 - OCTOBER 2015</h4>
                                     <h4 class="subheading">BOOTCAMP TIME</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I cannot speak highly enough about my experience at <a href="http://designation.io/" target="_blank">DESIGNATION</a>. Four months, 70 hours/week - this very rigorous UX/UI/Front end development bootcamp provided the space and instruction for me to become fluent in multiple coding languages and design platforms/software.</p>
+                                    <p class="text-muted">I cannot speak highly enough about my experience at <a href="http://designation.io/blog/interview-danny-luber/" target="_blank">DESIGNATION</a>. Four months, 70 hours/week - this very rigorous UX/UI/Front end development bootcamp provided the space and instruction for me learn the theory and technical skills behind product design.</p>
                                 </div>
                                 
                             </div>
